# ESPNOW

./: .gitignore  README.md
ESPNOW_MAC_ADD/: sdkconfig
ESPNOW_MAC_ADD/main/: CMakeLists.txt  ESPNOW_MAC_ADD.c
ESPNOW_SEND/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
ESPNOW_SEND/main/: CMakeLists.txt  Kconfig.projbuild  filelist.txt  gui_task.c  gui_task.h  main.c  main.h  ui.c  ui.h
ESPNOW_SEND/main/components/: ui_comp.h  ui_comp_panel2.c  ui_comp_panel2.h
ESPNOW_SEND/main/esp_now/: Kconfig.projbuild  espnow_example.c  espnow_example.h
ESPNOW_SEND/main/fonts/: ui_font_Font16.c  ui_font_Font16S.c
ESPNOW_SEND/main/images/: ui_img_album_png.c  ui_img_avatar_png.c  ui_img_backward_png.c  ui_img_chatbox2_png.c  ui_img_chatbox_png.c  ui_img_clock_hour_png.c  ui_img_clock_min_png.c  ui_img_clock_sec_png.c  ui_img_cloud_png.c  ui_img_forward_png.c  ui_img_left_png.c  ui_img_pattern_png.c  ui_img_phone_png.c  ui_img_play_png.c  ui_img_right_png.c  ui_img_sls_logo_png.c  ui_img_weather_1_png.c  ui_img_weather_2_png.c  ui_img_weather_3_png.c  ui_img_yu_logo1_png.c  ui_img_yu_logo2_png.c  ui_img_yu_logo_png.c
ESPNOW_SEND/main/speech_rec/: app_speech_recsrc.c  app_speech_srcif.h  app_speech_wakeup.c  file_manager.c  wav_player.c  wav_player.h
ESPNOW_SEND/yu_08152!/SquareLine_Project/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
ESPNOW_SEND/yu_08152!/SquareLine_Project/main/ui/components/: ui_comp.c  ui_comp_hook.h
ESPNOW_SEND/yu_08152!/SquareLine_Project/main/ui/images/: ui_img_yu_bg_01_png.c  ui_img_yu_logo1_png.c  ui_img_yu_logo2_png.c
(+15 files in other folders)
